--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Doompeck/employee-tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
+    "dotenv": "^16.0.1",
     "inquirer": "^9.1.0",
     "mysql2": "^2.3.3"
   }
